syntax = "proto3";
package lh_proto;

import "google/protobuf/timestamp.proto";
import "lh_proto.proto";

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.common.proto.scheduler";

// This section contains data used internally by scheduler.

message NodeRunStatePb {
    string node_name = 1;
    int32 attempt_number = 2;
    int32 position = 3;
    int32 number = 4;
    LHStatusPb status = 5;
    repeated string timer_keys = 6;
}

message ThreadRunStatePb {
    string thread_spec_name = 1;
    LHStatusPb status = 2;
    optional NodeRunStatePb current_node_run = 3;
}

message WfRunStatePb {
    string id = 1;
    string wf_spec_id = 2;
    LHStatusPb status = 6;
    map<int32, ThreadRunStatePb> thread_runs = 7;
    google.protobuf.Timestamp start_time = 8;
    optional google.protobuf.Timestamp end_time = 9;
}

// This section contains Input Events to the Scheduler.
message WfRunRequestPb {
    optional string wf_run_id = 1;
    string wf_spec_id = 2;
}

message TaskScheduleRequestPb {
    string task_def_id = 1;
    string task_def_name = 2;
    int32 thread_run_number = 4;
    int32 task_run_number = 5;
    int32 task_run_position = 6;
    string wf_run_id = 7;
    string reply_kafka_topic = 8;
    string wf_spec_id = 9;
    int32 attempt_number = 10;
    string node_name = 11;
}

message TaskStartedEventPb {
    int32 thread_run_number = 1;
    int32 task_run_number = 2;
    int32 task_run_position = 3;
    google.protobuf.Timestamp time = 4;
}

message TaskResultEventPb {
    int32 thread_run_number = 1;
    int32 task_run_number = 2;
    int32 task_run_position = 3;
    google.protobuf.Timestamp time = 4;

    TaskResultCodePb result_code = 5;
    optional bytes output = 6;
    optional bytes log_output = 7;
}

message WfRunEventPb {
    string wf_run_id = 1;
    string wf_spec_id = 2;
    google.protobuf.Timestamp time = 3;
    oneof event {
        WfRunRequestPb run_request = 4;
        TaskStartedEventPb started_event = 5;
        TaskResultEventPb task_result = 6;
    }
}

// Timer-related stuff

message SchedulerTimerPb {
    google.protobuf.Timestamp maturation_time = 1;
    string wf_run_id = 2;
    WfRunEventPb event = 3;
}
